# berka-pipeline-airflow

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
dags/: berka_pipeline.py
docker/airflow/: requirements.txt
include/: constants.py
include/notebooks/: test.ipynb
include/scripts/: connectors.py  extract.py  process.py
include/sql/: create_tables.sql  load_to_dw.sql
snowflake/: berka_setup_raw_schema_and_s3.sql.sql
