[project]
name = "berka-pipeline-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.2",
    "dotenv>=0.9.9",
    "duckdb>=1.2.2",
    "ipykernel>=6.29.5",
    "polars>=1.27.1",
    "pymysql>=1.1.1",
]
